# py-cellar

./: .gitignore  README.md  development_notes.md  notes.md  ops_notes.md  todo.md
api/: .gitignore  main.py  requirements.txt
batch_processing/: mix_notes.md  notes.md  spark.md
continous_automation/: README.md
continuous_automation/: README.md
crud_api/: .gitignore  README.md  docker-compose.yml  locustfile.py  main.py  req.txt  sqlmodel.ipynb  workspace.ipynb
data_transfer/: README.md  pyproject.toml
data_transfer/docker/: redpanda_docker-compose.yaml
data_transfer/web_sockets/: README.md  pre_notes.md  suggest_readme.md
data_transfer/web_sockets/broadcast/: Makefile  compose.yaml
data_transfer/web_sockets/broadcast/backend/: Dockerfile  app.py  requirements.txt
data_transfer/web_sockets/echo/client/: main.py
data_transfer/web_sockets/echo/server/: main.py
deployment/: README.md  a-b_test_math.md  deployment_strategies.md  notes-2.md
deployment/examples/api-model_in_service/: pyproject.toml
deployment/examples/api-model_in_service/app/: config.py
deployment/examples/api-que-model_as_service/: Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  workspace.ipynb
deployment/examples/api-que-model_as_service/app/: api.py  config.py  service.py
deployment/examples/bentoml_deployment_patterns/: Dockerfile  Makefile  README.md  bentofile.yaml  compose.yaml  pyproject.toml  requirements.txt
deployment/examples/bentoml_deployment_patterns/config/: em_L12-v2.yaml  em_L6-v2.yaml
deployment/examples/bentoml_deployment_patterns/nginx/: blue_green_deployment_nginx.conf  canary_deployment_nginx.conf  nginx.conf  shadow_deployment_nginx.conf
deployment/examples/bentoml_deployment_patterns/src/: config.py  model.py  service.py
feature_store/: README.md
fs/: README.md  customer_purchases.csv  test.csv  train.csv  (+1 more)
ml_api/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.py  todo.md  workspace.ipynb
ml_api/api_template/: .gitignore  README.md  pyproject.toml
ml_api/api_template/app/: main.py
ml_api/api_template/app/api/routers/: __init__.py
ml_api/api_template/app/services/: __init__.py
ml_api/api_template/docker/: Dockerfile
ml_api/app/: main.py
ml_api/app/api/routers/: __init__.py  router.py
ml_api/app/api/routers/v1/: clip.py  qa.py
ml_api/app/core/: config.py  logging.py
ml_api/app/schemas/: clip.py  nlp.py
ml_api/app/services/: base.py  clip.py  nlp.py
ml_api/app/utils/: embedding.py  object_storage.py
ml_api/app/utils/monitoring/: clip.py  qa.py
ml_api/docker/: docker-compose.yaml
ml_api/mlops/: Dockerfile  docker-compose-support.yaml  docker-compose.yaml
ml_api/mlops/grafana/provisioning/dashboards/: api_dashboard.json  fastapi-dashboard.json  qa.json  qa_metrics_dashboard.json  qa_question_length.json
ml_api/mlops/grafana/provisioning/datasources/: datasource.yml
ml_api/mlops/prometheus/: prometheus.yml
model_reqistry/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  worspace.ipynb
model_reqistry/docs/: deployment_notes.md
model_reqistry/mlops/: Dockerfile.registry  docker-compose.model-registry.yaml  registry_requirements.txt
model_reqistry/registry/: api.py  app.py  client.py  config.py  exceptions.py  logger.py  registry.py  schemas.py  services.py
model_reqistry/registry/api/routes/: models.py
model_reqistry/registry/core/: dependencies.py  registry.py
model_reqistry/registry/static/: index.html
model_reqistry/registry/static/css/: style.css
model_reqistry/registry/storage/: base.py  minio.py  mongo.py
model_reqistry/tests/: conftest.py  test_client.py
(+93 files in other folders)
