[project]
name = "streaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "kafka-python>=2.0.2",
    "numpy>=2.1.3",
    "quixstreams>=3.3.0",
    "ruff>=0.8.0",
]
