[project]
name = "ml_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "minio>=7.2.9",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "pymongo>=4.10.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.31.0",
]

[project.optional-dependencies]
vision = [
    "onnx>=1.16.2",
    "onnxruntime>=1.19.2",
]
nlp = [
    "transformers[torch]==4.30.0",
]

[tool.uv]
dev-dependencies = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "sentence-transformers>=2.2.2",
    "transformers[torch]==4.30.0",
]
