[project]
name = "model-reqistry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.3",
    "minio>=7.2.9",
    "pydantic-settings[yaml]>=2.6.0",
    "pydantic>=2.9.2",
    "pymongo>=4.10.1",
    "python-multipart>=0.0.12",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
]
